--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     flex-direction:column;
     align-items:center;
     background-color: #F2CDAC;
+    padding:10px;
 }
 h1{
     font-family:'the high line';
@@ -38,7 +39,7 @@ article{
     flex-direction:column;
 }
 footer{
-    color: #18f96a;
+    color: #4C4A59;
     Font-size: 100%;
 
 }
@@ -56,7 +57,7 @@ a:active{
 }
 
 blockquote{
-    text-decoration: italic;
+    font-style: italic;
     display:flex;
     align-items: left;
 }
